Создано с помощью Colaboratory

--- a/Hw6.1.ipynb
+++ b/Hw6.1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMQobykA++eLo3Y8QSPzMpn",
+      "authorship_tag": "ABX9TyO5rx6++hLnd+/1F+ku3zCb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -235,7 +235,7 @@
         "plt.figure(figsize = (14,6))\n",
         "plt.hist(df.toPandas()['reviews'], color = 'blue', edgecolor = 'black', bins = 100)\n",
         "plt.xlabel('Reviews')\n",
-        "plt.ylabel('Books')\n",
+        "plt.ylabel('Frequency')\n",
         "plt.xlim(0, None)\n",
         "plt.grid(linestyle='--', axis='y')\n",
         "plt.show()"
@@ -245,7 +245,7 @@
         "outputId": "ac651fd2-f55c-4a0a-b334-1ea9ae15eba6",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 542
+          "height": 492
         }
       },
       "execution_count": 17,
@@ -273,12 +273,120 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "df.corr('user_rating', 'reviews')"
+      ],
       "metadata": {
-        "id": "h1g-kwMu78_4"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "h1g-kwMu78_4",
+        "outputId": "3783aae0-31d6-4284-ce5f-52c4393f3f7d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-0.0017290088319646029"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.corr('user_rating', 'price')"
+      ],
+      "metadata": {
+        "id": "zeWGaedo-_4d",
+        "outputId": "2c813efe-1e0c-4442-86c7-142c3472d6fc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-0.13308630757790718"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.corr('reviews', 'price')"
+      ],
+      "metadata": {
+        "id": "AtpYGamw_Dgr",
+        "outputId": "35169f72-5ac8-47b7-a295-1ac204610b70",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-0.10918188342780513"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from pyspark.ml.stat import Correlation\n",
+        "\n",
+        "# Correlation.corr(df, 'reviews', 'pearson').collect()[0][0]\n",
+        "\n",
+        "dataset = [df['user_rating'], df['reviews'], df['price']]\n",
+        "dataset\n",
+        "# dataset = spark.createDataFrame(dataset, ['features'])\n",
+        "\n",
+        "\n",
+        "features = dataset.map(lambda row: row[0:])\n",
+        "\n",
+        "from pyspark.mllib.stat import Statistics\n",
+        "\n",
+        "corr_mat=Statistics.corr(features, method=\"pearson\")"
+      ],
+      "metadata": {
+        "id": "3Njep16KADBR",
+        "outputId": "9acb4229-9a34-467f-9e8d-92ed513ca22c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[Column<'user_rating'>, Column<'reviews'>, Column<'price'>]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
     }
   ]
 }
