Создано с помощью Colaboratory

--- a/Hw6.1.ipynb
+++ b/Hw6.1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOc/iXc5cRX71cKUvbddwKH",
+      "authorship_tag": "ABX9TyNS+L9KVDSie7hAdNd+abrf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -408,11 +408,11 @@
         "    "
       ],
       "metadata": {
-        "id": "fkEUvE05DF_D",
-        "outputId": "894b4b9d-8174-44cb-9e6c-ac8cfced08b7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fkEUvE05DF_D",
+        "outputId": "894b4b9d-8174-44cb-9e6c-ac8cfced08b7"
       },
       "execution_count": 47,
       "outputs": [
@@ -425,6 +425,98 @@
             "+-----------+----------+\n",
             "|Sarah Young|       4.9|\n",
             "+-----------+----------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Найдите трех авторов с самым низким рейтингом."
+      ],
+      "metadata": {
+        "id": "_XbTmvRWL1-s"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "spark.sql(\n",
+        "    \"\"\"\n",
+        "    Select author as `Author`, max(user_rating) as `Max rating`\n",
+        "    From Books \n",
+        "    Group By author\n",
+        "    Order by `Max rating`\n",
+        "    Limit 3\n",
+        "    \"\"\"\n",
+        ").show()"
+      ],
+      "metadata": {
+        "id": "_8vxErABL3ED",
+        "outputId": "1c385d6d-2fb5-41c2-8637-5dfbad6b20a4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+--------------+----------+\n",
+            "|        Author|Max rating|\n",
+            "+--------------+----------+\n",
+            "|   Donna Tartt|       3.9|\n",
+            "| Gillian Flynn|       4.0|\n",
+            "|Muriel Barbery|       4.0|\n",
+            "+--------------+----------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Определите какой автор получил наибольшее количество рецензий."
+      ],
+      "metadata": {
+        "id": "CgsJS4z1L-7D"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "spark.sql(\n",
+        "    \"\"\"\n",
+        "    Select author as `Author`, sum(reviews) as `Total reviews`\n",
+        "    From Books \n",
+        "    Group By author\n",
+        "    Order by `Total reviews` desc\n",
+        "    Limit 1\n",
+        "    \"\"\"\n",
+        ").show()"
+      ],
+      "metadata": {
+        "id": "ro7k4D50L_1D",
+        "outputId": "105dabbe-badf-43c4-ce74-022dd4b7bc10",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---------------+-------------+\n",
+            "|         Author|Total reviews|\n",
+            "+---------------+-------------+\n",
+            "|Suzanne Collins|       278329|\n",
+            "+---------------+-------------+\n",
             "\n"
           ]
         }
