Создано с помощью Colaboratory

--- a/Hw6.1.ipynb
+++ b/Hw6.1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNS+L9KVDSie7hAdNd+abrf",
+      "authorship_tag": "ABX9TyPV8S28OEVOm2xN/Y/n0+iz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -453,13 +453,13 @@
         ").show()"
       ],
       "metadata": {
-        "id": "_8vxErABL3ED",
-        "outputId": "1c385d6d-2fb5-41c2-8637-5dfbad6b20a4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_8vxErABL3ED",
+        "outputId": "1ebc805b-d573-4b92-a6a2-a08a20f670ce"
       },
-      "execution_count": 50,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
@@ -500,11 +500,11 @@
         ").show()"
       ],
       "metadata": {
-        "id": "ro7k4D50L_1D",
-        "outputId": "105dabbe-badf-43c4-ce74-022dd4b7bc10",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ro7k4D50L_1D",
+        "outputId": "105dabbe-badf-43c4-ce74-022dd4b7bc10"
       },
       "execution_count": 52,
       "outputs": [
@@ -517,6 +517,51 @@
             "+---------------+-------------+\n",
             "|Suzanne Collins|       278329|\n",
             "+---------------+-------------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Определите какой автор написал наибольшее количество книг за весь доступный в данных период."
+      ],
+      "metadata": {
+        "id": "pbLvpSRuM0gy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "spark.sql(\n",
+        "    \"\"\"\n",
+        "    Select author as `Author`, COUNT(name) as `Count books`\n",
+        "    From Books \n",
+        "    Group By author\n",
+        "    Order by `Count books` desc\n",
+        "    Limit 1\n",
+        "    \"\"\"\n",
+        ").show()"
+      ],
+      "metadata": {
+        "id": "FSRnaN3cM3qq",
+        "outputId": "def8f28c-62ae-4c13-aaf7-63c7e4a84cc7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-----------+-----------+\n",
+            "|     Author|Count books|\n",
+            "+-----------+-----------+\n",
+            "|Jeff Kinney|         12|\n",
+            "+-----------+-----------+\n",
             "\n"
           ]
         }
