Создано с помощью Colaboratory

--- a/Hw6.1.ipynb
+++ b/Hw6.1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPV8S28OEVOm2xN/Y/n0+iz",
+      "authorship_tag": "ABX9TyOwg8kIghle0YX86Pb729Id",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -398,7 +398,8 @@
       "source": [
         "spark.sql(\n",
         "    \"\"\"\n",
-        "    Select author as `Author`, max(user_rating) as `Max rating`\n",
+        "    Select \n",
+        "      author as `Author`, max(user_rating) as `Max rating`\n",
         "    From Books \n",
         "    Group By author\n",
         "    Order by `Max rating` desc\n",
@@ -412,9 +413,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fkEUvE05DF_D",
-        "outputId": "894b4b9d-8174-44cb-9e6c-ac8cfced08b7"
+        "outputId": "d87f596a-4776-4d22-e6d2-9e3a103c1cf2"
       },
-      "execution_count": 47,
+      "execution_count": 70,
       "outputs": [
         {
           "output_type": "stream",
@@ -444,10 +445,11 @@
       "source": [
         "spark.sql(\n",
         "    \"\"\"\n",
-        "    Select author as `Author`, max(user_rating) as `Max rating`\n",
+        "    Select \n",
+        "      author as `Author`, min(user_rating) as `Min rating`\n",
         "    From Books \n",
         "    Group By author\n",
-        "    Order by `Max rating`\n",
+        "    Order by `Min rating`\n",
         "    Limit 3\n",
         "    \"\"\"\n",
         ").show()"
@@ -457,21 +459,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_8vxErABL3ED",
-        "outputId": "1ebc805b-d573-4b92-a6a2-a08a20f670ce"
+        "outputId": "02be422a-269f-4ab9-8a09-1560d6738fd5"
       },
-      "execution_count": 55,
+      "execution_count": 81,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "+--------------+----------+\n",
-            "|        Author|Max rating|\n",
-            "+--------------+----------+\n",
-            "|   Donna Tartt|       3.9|\n",
-            "| Gillian Flynn|       4.0|\n",
-            "|Muriel Barbery|       4.0|\n",
-            "+--------------+----------+\n",
+            "+------------+----------+\n",
+            "|      Author|Min rating|\n",
+            "+------------+----------+\n",
+            "|J.K. Rowling|       3.3|\n",
+            "|  Harper Lee|       3.6|\n",
+            "|   E L James|       3.8|\n",
+            "+------------+----------+\n",
             "\n"
           ]
         }
@@ -491,7 +493,8 @@
       "source": [
         "spark.sql(\n",
         "    \"\"\"\n",
-        "    Select author as `Author`, sum(reviews) as `Total reviews`\n",
+        "    Select \n",
+        "      author as `Author`, sum(reviews) as `Total reviews`\n",
         "    From Books \n",
         "    Group By author\n",
         "    Order by `Total reviews` desc\n",
@@ -504,9 +507,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ro7k4D50L_1D",
-        "outputId": "105dabbe-badf-43c4-ce74-022dd4b7bc10"
+        "outputId": "b5cb996a-4b05-448c-c66e-0e3c949d9c07"
       },
-      "execution_count": 52,
+      "execution_count": 72,
       "outputs": [
         {
           "output_type": "stream",
@@ -536,7 +539,8 @@
       "source": [
         "spark.sql(\n",
         "    \"\"\"\n",
-        "    Select author as `Author`, COUNT(name) as `Count books`\n",
+        "    Select \n",
+        "      author as `Author`, COUNT(name) as `Count books`\n",
         "    From Books \n",
         "    Group By author\n",
         "    Order by `Count books` desc\n",
@@ -545,13 +549,13 @@
         ").show()"
       ],
       "metadata": {
-        "id": "FSRnaN3cM3qq",
-        "outputId": "def8f28c-62ae-4c13-aaf7-63c7e4a84cc7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "FSRnaN3cM3qq",
+        "outputId": "753ca190-7c8e-4011-bd49-e175a825c153"
       },
-      "execution_count": 61,
+      "execution_count": 73,
       "outputs": [
         {
           "output_type": "stream",
@@ -562,6 +566,148 @@
             "+-----------+-----------+\n",
             "|Jeff Kinney|         12|\n",
             "+-----------+-----------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Определите какая книга жанра \"Fiction\" имеет самый маленький рейтинг."
+      ],
+      "metadata": {
+        "id": "qmegBvMcQMbs"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "spark.sql(\n",
+        "    \"\"\"\n",
+        "    Select \n",
+        "      name as `Book`, min(user_rating) as `Min rating`\n",
+        "    From Books\n",
+        "    WHERE genre=\"Fiction\" \n",
+        "    Group By `Book`\n",
+        "    Order by `Min rating`\n",
+        "    Limit 1\n",
+        "    \"\"\"\n",
+        ").show()"
+      ],
+      "metadata": {
+        "id": "IFVNZdmAQSo8",
+        "outputId": "5b880fab-e0ed-43f7-8ad8-07ad36216282",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+------------------+----------+\n",
+            "|              Book|Min rating|\n",
+            "+------------------+----------+\n",
+            "|The Casual Vacancy|       3.3|\n",
+            "+------------------+----------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Определите какая книга жанра \"Non Fiction\" имеет самый высокий рейтинг."
+      ],
+      "metadata": {
+        "id": "r5zw31W3QNNz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "spark.sql(\n",
+        "    \"\"\"\n",
+        "    Select \n",
+        "      name as `Book`, max(user_rating) as `Max rating`\n",
+        "    From Books\n",
+        "    WHERE genre=\"Non Fiction\" \n",
+        "    Group By `Book`\n",
+        "    Order by `Max rating` desc\n",
+        "    Limit 1\n",
+        "    \"\"\"\n",
+        ").show()"
+      ],
+      "metadata": {
+        "id": "ZbwTAB7xTu-9",
+        "outputId": "fc026fe4-7f49-473f-f5f1-43aea01782eb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 95,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+--------------------+----------+\n",
+            "|                Book|Max rating|\n",
+            "+--------------------+----------+\n",
+            "|Obama: An Intimat...|       4.9|\n",
+            "+--------------------+----------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.filter('genre == \"Non Fiction\"').orderBy('user_rating', ascending=False).show()"
+      ],
+      "metadata": {
+        "id": "lLu9KeA6S1eP",
+        "outputId": "a948b721-1c42-4762-86a7-9b11a3fd6a10",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 93,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+--------------------+------------------+-----------+-------+-----+----+-----------+\n",
+            "|                name|            author|user_rating|reviews|price|year|      genre|\n",
+            "+--------------------+------------------+-----------+-------+-----+----+-----------+\n",
+            "|Hamilton: The Rev...|Lin-Manuel Miranda|        4.9|   5867| 54.0|2016|Non Fiction|\n",
+            "|Humans of New Yor...|   Brandon Stanton|        4.9|   2812| 17.0|2015|Non Fiction|\n",
+            "|Jesus Calling: En...|       Sarah Young|        4.9|  19576|  8.0|2011|Non Fiction|\n",
+            "|Jesus Calling: En...|       Sarah Young|        4.9|  19576|  8.0|2012|Non Fiction|\n",
+            "|Jesus Calling: En...|       Sarah Young|        4.9|  19576|  8.0|2013|Non Fiction|\n",
+            "|Jesus Calling: En...|       Sarah Young|        4.9|  19576|  8.0|2014|Non Fiction|\n",
+            "|Jesus Calling: En...|       Sarah Young|        4.9|  19576|  8.0|2015|Non Fiction|\n",
+            "|Jesus Calling: En...|       Sarah Young|        4.9|  19576|  8.0|2016|Non Fiction|\n",
+            "|Obama: An Intimat...|        Pete Souza|        4.9|   3192| 22.0|2017|Non Fiction|\n",
+            "|  The Magnolia Story|       Chip Gaines|        4.9|   7861|  5.0|2016|Non Fiction|\n",
+            "|Unfreedom of the ...|     Mark R. Levin|        4.9|   5956| 11.0|2019|Non Fiction|\n",
+            "|Homebody: A Guide...|     Joanna Gaines|        4.8|   3776| 22.0|2018|Non Fiction|\n",
+            "|Creative Haven Ow...|   Marjorie Sarnat|        4.8|   3871|  5.0|2015|Non Fiction|\n",
+            "|  Humans of New York|   Brandon Stanton|        4.8|   3490| 15.0|2013|Non Fiction|\n",
+            "|Daring Greatly: H...|      Brené Brown|        4.8|   1329| 10.0|2013|Non Fiction|\n",
+            "|  Humans of New York|   Brandon Stanton|        4.8|   3490| 15.0|2014|Non Fiction|\n",
+            "|Barefoot Contessa...|        Ina Garten|        4.8|   1296| 24.0|2012|Non Fiction|\n",
+            "|Magnolia Table: A...|     Joanna Gaines|        4.8|   9867| 16.0|2018|Non Fiction|\n",
+            "|            Becoming|    Michelle Obama|        4.8|  61133| 11.0|2018|Non Fiction|\n",
+            "|            Becoming|    Michelle Obama|        4.8|  61133| 11.0|2019|Non Fiction|\n",
+            "+--------------------+------------------+-----------+-------+-----+----+-----------+\n",
+            "only showing top 20 rows\n",
             "\n"
           ]
         }
