Создано с помощью Colaboratory

--- a/Hw6.1.ipynb
+++ b/Hw6.1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOwg8kIghle0YX86Pb729Id",
+      "authorship_tag": "ABX9TyPJjpEPnYBJbB+F9BGdy3BW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -593,28 +593,30 @@
         "    Order by `Min rating`\n",
         "    Limit 1\n",
         "    \"\"\"\n",
-        ").show()"
+        ").head()[0]"
       ],
       "metadata": {
-        "id": "IFVNZdmAQSo8",
-        "outputId": "5b880fab-e0ed-43f7-8ad8-07ad36216282",
         "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "IFVNZdmAQSo8",
+        "outputId": "13e2972e-9c36-4ea4-934a-4dd4fe2ae336"
       },
-      "execution_count": 90,
+      "execution_count": 100,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "+------------------+----------+\n",
-            "|              Book|Min rating|\n",
-            "+------------------+----------+\n",
-            "|The Casual Vacancy|       3.3|\n",
-            "+------------------+----------+\n",
-            "\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'The Casual Vacancy'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 100
         }
       ]
     },
@@ -640,30 +642,59 @@
         "    Order by `Max rating` desc\n",
         "    Limit 1\n",
         "    \"\"\"\n",
-        ").show()"
+        ").head()[0]"
       ],
       "metadata": {
-        "id": "ZbwTAB7xTu-9",
-        "outputId": "fc026fe4-7f49-473f-f5f1-43aea01782eb",
         "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "ZbwTAB7xTu-9",
+        "outputId": "fcc44624-354d-4e7b-9d9a-d9217a0b0d6f"
       },
-      "execution_count": 95,
+      "execution_count": 99,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "+--------------------+----------+\n",
-            "|                Book|Max rating|\n",
-            "+--------------------+----------+\n",
-            "|Obama: An Intimat...|       4.9|\n",
-            "+--------------------+----------+\n",
-            "\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Obama: An Intimate Portrait'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 99
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Задание 3"
+      ],
+      "metadata": {
+        "id": "flO_0L_OVfKK"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Постройте гистограмму среднего количества рецензий по годам. В виде отдельной гистограммы визуализируйте количество книг жанра \"Fiction\" и \"Non Fiction\" за весь доступный период."
+      ],
+      "metadata": {
+        "id": "giUCO2cUVghK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "UGNPJ1-gVidi"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -671,11 +702,11 @@
         "df.filter('genre == \"Non Fiction\"').orderBy('user_rating', ascending=False).show()"
       ],
       "metadata": {
-        "id": "lLu9KeA6S1eP",
-        "outputId": "a948b721-1c42-4762-86a7-9b11a3fd6a10",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "lLu9KeA6S1eP",
+        "outputId": "a948b721-1c42-4762-86a7-9b11a3fd6a10"
       },
       "execution_count": 93,
       "outputs": [
